# StatStrel

./: .gitignore  README.md  addOfficerDialog.ui  add_officer_ui.py  config.py  database.py  devision_chart.ui  devision_chart_ui.py  div_chart_dialog.ui  generate_ui.bat  main.py  mainwindow_ui.py  mainwindow_ui.ui  pyproject.toml  resource.qrc  settings_ui.py  settings_ui.ui  test_conn_mysql.py  ui_to_py.bat  user_profile_ui.py  user_profile_ui.ui
common/: calc_mid_divisions.py  class_user.py  config_load.py  generate_query_result.py  get_division_degree.py  get_user_degree.py  handler_users_results.py  parsing_docx.py
data/: create_session.py  delete_user.py  fetch_all_degree.py  fetch_all_divisions.py  fetch_all_tasks.py  fetch_task_4.py  fetch_task_results_by_user_id.py  fetch_users.py  insert_user.py  insert_user_results.py  select_all_groups.py  select_results_by_user_id.py  select_users.py  select_users_by_search.py  select_users_from_division.py  update_user.py
dialogs/: AddUsersList.py  DivisionChartDialog.py  SettingsDialog.py  UserCreateDialog.py  UserEditDialog.py  UserProfileDialog.py
qt_ui/: addOfficerDialog.ui  div_chart_dialog.ui  mainwindow_ui.ui  parsing_file_path.ui  user_profile_ui.ui
table_models/: list_table_model.py  user_profile_table_model.py
user_interface/: mainwindow_ui.py  parsing_file_path_ui.py  user_profile_ui.py
