[tool.poetry]
name = "statstrel"
version = "0.1.0"
description = ""
authors = ["alekskositsyn <61062623+alekskositsyn@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
PySide6 = "^6.6.0"
SQLAlchemy = "^2.0.23"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
