[tool.poetry]
name = "statstrel"
version = "0.1.0"
description = ""
authors = ["alekskositsyn <61062623+alekskositsyn@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
PySide6 = "^6.6.0"
SQLAlchemy = "^2.0.23"
pydantic-settings = "^2.1.0"
mysql-connector-python = "^8.2.0"
docx = "^0.2.4"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
